Correction in purchase processing views

--- a/src/app/pages/cart/cart.page.html
+++ b/src/app/pages/cart/cart.page.html
@@ -106,10 +106,10 @@
                     <!-- {{data?.Deafult_address?.zipcode}} -->
                 </p>
             </div>
-            <div class="change">
+            <!-- <div class="change">
                 <ion-button class="trans-btn change_ad" (click)="change_Address()">
                     {{"cart_page.change_address_btn" | translate}}</ion-button>
-            </div>
+            </div> -->
         </div>
         <div #map id="map"></div>
     </div>
