--- a/src/app/pages/grocery-cart/grocery-cart.page.html
+++ b/src/app/pages/grocery-cart/grocery-cart.page.html
@@ -1,7 +1,7 @@
 <ion-header no-border>
     <ion-toolbar mode="md">
         <ion-buttons slot="start">
-            <ion-back-button defaultHref="home" icon="ios-arrow-back" text=""></ion-back-button>
+            <ion-back-button color="light" defaultHref="home" icon="ios-arrow-back" text=""></ion-back-button>
         </ion-buttons>
         <ion-title>{{"grocery_cart.cart" | translate }}</ion-title>
     </ion-toolbar>
@@ -132,10 +132,10 @@
                      <!-- {{data?.Deafult_address?.zipcode}} -->
                 </p>
             </div>
-            <div class="change">
+            <!-- <div class="change">
                 <ion-button class="trans-btn change_ad" (click)="change_Address()">
                     {{"grocery_cart.change_address" | translate }}</ion-button>
-            </div>
+            </div> -->
         </div>
         <div #map id="map">
             <agm-map [styles]="styles" [latitude]="agmMap.lat" [longitude]="agmMap.lng" [disableDefaultUI]="true">
