--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -605,6 +605,15 @@ $colors: (
         text-align: center;
       }
 
+      .status {
+        font-size: 16px;
+        // color: var(--light-black-color);
+        font-family: "fivo-regular";
+        margin-top: 0;
+        margin-bottom: 5px;
+        text-align: center;
+      }
+
       .organic_div {
         padding: 5px 0px;
         display: flex;
