--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,13 +40,13 @@
                 <div class="footer_div">
                     <ion-label color="light" class="ion-float-right" (click)="Setting()">
                         <h3>
-                            <ion-icon color="light" src="../assets/icon-image/setting.svg"></ion-icon>
+                            <ion-icon color="light" src="./assets/icon-image/setting.svg"></ion-icon>
                             {{'side_menu.Setting' | translate}}
                         </h3>
                     </ion-label>
                     <ion-label color="light" (click)="logout()">
                         <h3>
-                            <ion-icon color="light" src="assets/icon-image/logout.svg"></ion-icon>
+                            <ion-icon color="light" src="./assets/icon-image/logout.svg"></ion-icon>
                             {{'side_menu.Logout' | translate}}
                         </h3>
                     </ion-label>
